--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^7.32.0",
     "jest": "^29",
     "metro-react-native-babel-preset": "0.72.3",
+    "miragejs": "^0.1.47",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.8.3"
   },
