--- a/package.json
+++ b/package.json
@@ -41,11 +41,14 @@
     "metro-react-native-babel-preset": "0.72.3",
     "miragejs": "^0.1.47",
     "react-test-renderer": "18.1.0",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "xmlhttprequest": "^1.8.0"
   },
   "jest": {
     "preset": "react-native",
-    "setupFilesAfterEnv": ["@testing-library/jest-native/extend-expect"],
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
